fixed grid alignment issues

--- a/index.css
+++ b/index.css
@@ -52,9 +52,9 @@ a {
 }
 
 .projects-grid {
+  width: 80vw;
   display: flex;
   flex-wrap: wrap;
-  width: 1280px;
 }
 
 .project-tile {
